# packtpub-downloader

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  setup.cfg
packt_downloader/: __init__.py  __main__.py  config.py  models.py
tests/: data.py
