[tool.poetry]
name = "packtpub-downloader"
version = "0.1.0"
description = "Packt Downloader"
authors = ["lmbringas", "dgjustice"]

[tool.poetry.dependencies]
python = "^3.7"
aiofiles = "==0.4.0"
aiohttp = "==3.5.4"
async-timeout = "==3.0.1"
attrs = "==18.2.0"
certifi = "==2018.11.29"
chardet = "==3.0.4"
idna = "==2.8"
idna-ssl = "==1.1.0"
multidict = "==4.5.2"
requests = "==2.21.0"
tqdm = "==4.30.0"
urllib3 = "==1.24.1"
yarl = "==1.3.0"
returns = {git = "https://github.com/dry-python/returns.git", rev = "master"}
pydantic = "^1.5.1"
gevent = "^20.5.0"

[tool.poetry.dev-dependencies]
black = { version = "19.3b0", allow-prereleases = true }
mypy = "^0.750.0"
pytest = "^5.3"
pylama = "^7.7"
pytest-coverage = "^0.0.0"
flake8-import-order = "^0.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
